# polkadot-cli

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.,yml  rust.yml
src/: command.rs  errors.rs  handler.rs  helper.rs  main.rs  rpc.rs
src/app/: command.rs  helper.rs  mod.rs
src/app/dashboard/: mod.rs  tab_blocks.rs  tab_events.rs  tab_pallets.rs  tab_system.rs
src/cli/: app.rs  mod.rs
src/handler/: dashboard.rs  mod.rs  printer.rs
src/networks/: darwinia.rs  mod.rs  node_template.rs  pangolin.rs  polkadot.rs
src/networks/types/: mod.rs  panglin.rs  utils.rs
src/rpc/: api.rs  client.rs  errors.rs  events.rs  mod.rs  rpc.rs  storage.rs  types.rs
