[package]
name = "suber"
author = ["boundless.forest@outlook.com"]
readme = "README.md"
repository = "https://github.com/boundless-forest/suber"
description = "TODO"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.0.1"

[dependencies]
jsonrpsee = { version = "0.18.2", features = ["http-client", "async-client", "client-ws-transport-native-tls"] }
tokio = { version = "1.29.0", features = ["rt", "macros", "rt-multi-thread"] }
anyhow = "1.0.71"
rustyline = "12.0.0"
clap = { version = "4.3.8", features = ["derive"] }
dirs = "5.0.1"
colored = "2.0.0"
figlet-rs = "0.1.5"
clap_complete_command = "0.5.1"
shell-words = "1.1.0"
async-trait = "0.1.69"
serde_json = "1.0.100"
serde = "1.0.166"