[package]
name = "polkadot-cli"
author = "boundless.forest@outlook.com"
readme = "README.md"
repository = "https://github.com/boundless-forest/polkadot-cli"
description = "Substrate based chain command helper."
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.0.1"

[dependencies]
# crate.io
jsonrpsee             = { version = "0.16.2", features = ["http-client", "async-client", "client-ws-transport"] }
tokio                 = { version = "1.29.0", features = ["rt", "macros", "rt-multi-thread"] }
rustyline             = { version = "12.0.0", features = ["with-fuzzy"] }
clap                  = { version = "4.3.8", features = ["derive", "string"] }
dirs                  = { version = "5.0.1" }
colored               = { version = "2.0.0" }
figlet-rs             = { version = "0.1.5" }
shell-words           = { version = "1.1.0" }
async-trait           = { version = "0.1.69" }
serde_json            = { version = "1.0.100" }
serde                 = { version = "1.0.166" }
frame-metadata        = { version = "16.0.0", features = ["decode", "serde_full"] }
thiserror             = { version = "1.0.44" }
env_logger            = { version = "0.10.0" }
log                   = { version = "0.4.19"}
scale-info            = { version = "2.9.0" }
subxt-metadata        = { version = "0.31.0" }
scale-value           = { version = "0.12.0" }
comfy-table           = { version = "7.0.1" }
# substrate
sp-core          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-storage       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-version       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-balances  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
fp-account       = { git = "https://github.com/boundless-forest/frontier", branch = "bear-polkadot-v1.0.0" }